--- a/assets/style.css
+++ b/assets/style.css
@@ -11,6 +11,7 @@ background: white;
     width: 100%;
     height: 70px;
     background-color: #4d3319; 
+    z-index: 10;
 }
 
 .navbar-item {
@@ -22,9 +23,8 @@ background: white;
     margin-left: 160px;
 }
 
-.section {
-    width: 100%;
-    height: 800px;
+#section {
+    cursor: pointer;
 }
 
 #homepage {
@@ -52,7 +52,12 @@ background: white;
 }
 
 #aboutme {
-    background-color: #ffe6cc;
+    background-color: white;
+    height: 2000px;
+}
+
+#about {
+    background-color: #ffe6cc; 
 }
 
 #logo {
@@ -61,26 +66,78 @@ background: white;
     margin-left: 100px;
 }
 
-#about {
+#text {
     padding: 60px;
     line-height: 30px;
-    margin-left: 30%;
-    width: 700px;
+    margin-left: 0;
+    width: 1100px;
+    height: 300px;
     color: #e6005c;
     font-size: 20px;
 }
 
+#hobbytext {
+    text-align: center;
+    color: #40D6CC;
+}
+
+#hobbies {
+    display: inline-block;
+    margin-left: 100px;
+    margin-right: 175px;
+    width: 200px;
+    padding: 50px;
+    background-color: white;
+}
+
+.hobby {
+    width: 300px;
+}
+
+#foods {
+    position: relative;
+    display: inline-block;
+    text-align: center;
+    width: 600px;
+    padding: 50px;
+    color: white;
+    background-color: #40D6CC;
+}
+
+.food {
+    width: 300px;
+    padding: 10px;
+}
+
+#friends {
+    position: relative;
+    color: white;
+    background-color: #ffafbc;
+    text-align: center;
+    height: 400px;
+    padding: 50px;
+}
+
+.friend {
+    width: 350px;
+}
+
 #photopage {
-    background-color: #ffe6cc;
+    margin-top: 300px;
+    padding: 30px;
+    background-color: green;
 }
 
 #contact {
-    background-color: #ffe6cc;
+    background-color: black;
 }
 
 
 .picture {
-    width: 300px;
+    min-height:100px;
+    width:100%;
+    max-width:none;
+    margin:0 -100%;
 }
 
 }
