--- a/assets/style.css
+++ b/assets/style.css
@@ -84,8 +84,8 @@ background: white;
 #hobbies {
     display: inline-block;
     margin-left: 100px;
-    margin-right: 175px;
-    width: 200px;
+    margin-right: 160px;
+    width: 215px;
     padding: 50px;
     background-color: white;
 }
@@ -125,19 +125,83 @@ background: white;
 #photopage {
     margin-top: 300px;
     padding: 30px;
-    background-color: green;
+    background-color: #40D6CC;
+    text-align: center;
 }
 
-#contact {
-    background-color: black;
+#phototext {
+    font-size: 40px;
+    color: white;
+    text-align: center;
+    padding: 20px;
 }
 
+#lightbox {
+    top:0; 
+    left:0; 
+    width:100%; 
+    height:100%; 
+    background: rgba(0,0,0,.7); 
+    text-align:center;
+}
+
+#lightbox img {
+    box-shadow:0 0 25px #111;
+    -webkit-box-shadow:0 0 25px #111;
+    -moz-box-shadow:0 0 25px #111;
+    max-width:940px;
+}
+
+.img {
+    padding: 10px;
+}
 
 .picture {
-    min-height:100px;
-    width:100%;
-    max-width:none;
-    margin:0 -100%;
+    display: inline-block;
+    width: 500px;
+    height: 400px;
+    overflow: hidden;
+}
+
+.home {
+    width: 200px;
+}
+
+.social {
+    width: 120px;
+}
+
+.contact{
+    color: #e6005c;
+    display: inline-block;
+    width: 600px;
+    height: 200px;
+    text-align: center;
+}
+
+.circle {
+    display: table;
+    margin: auto;
+    width: 400px;
+}
+
+#contactpage {
+    position: relative;
+    color: #e6005c;
+    background-color: #ffe6cc;
+    padding: 30px;
+}
+
+#contacttext {
+    font-size: 40px;
+    text-align: center;
+    padding: 30px;
+}
+
+.sendtext {
+    font-size: 30px;
+    text-align: center;
+    padding: 30px;
 }
 
 }
