--- a/assets/style.css
+++ b/assets/style.css
@@ -6,11 +6,27 @@ padding: 0px;
 background: white;
 }
 
+#home:before{
+padding-top:50px;display:block;content:"";
+}
+
+#about:before{
+padding-top:50px;display:block;content:"";
+}
+
+#photos:before{
+padding-top:100px;display:block;content:"";
+}
+
+#contact:before{
+padding-top:700px;display:block;content:"";
+}
+
 #navbar {
     position: fixed;
     width: 100%;
     height: 70px;
-    background-color: #4d3319; 
+    background-color: #e6005c; 
     z-index: 10;
 }
 
@@ -133,7 +149,7 @@ background: white;
     font-size: 40px;
     color: white;
     text-align: center;
-    padding: 20px;
+    padding: 70px;
 }
 
 #lightbox {
@@ -195,7 +211,7 @@ background: white;
 #contacttext {
     font-size: 40px;
     text-align: center;
-    padding: 30px;
+    margin-top: 40px;
 }
 
 .sendtext {
