--- a/assets/style.css
+++ b/assets/style.css
@@ -41,11 +41,6 @@ padding-top:700px;display:block;content:"";
 
 #section {
     cursor: pointer;
-
-<style> html, body, a, a:hover { cursor:url('http://www.snazzyspace.com/cursorsfolder/dog-paw.png'), auto !important; }</style>
-<div><a style="position:fixed;z-index:9 !important;top:300px;left:3px;" href="http://www.snazzyspace.com/" title="Tumblr Mouse Cursors" target="_blank"><img 
-src="http://www.snazzyspace.com/images/tumblr_cursors.gif" border="0" alt="Tumblr Mouse Cursors" /></a></div>   
-
 }
 
 #homepage {
@@ -57,6 +52,27 @@ src="http://www.snazzyspace.com/images/tumblr_cursors.gif" border="0" alt="Tumbl
     margin-left: 100px;
     float: left;
     width: 500px;
+}
+
+#icy:hover {
+     animation: yay 0.5s infinite;
+}
+
+@keyframes yay {
+  30% {
+    -webkit-transform: translate(0, -5px);
+    -moz-transform: translate(0, -5px);
+    -o-transform: translate(0, -5px);
+    -ms-transform: translate(0, -5px);
+    transform: translate(0, -5px);
+  }
+  80% {
+    -webkit-transform: rotate(-5deg);
+    -moz-transform: rotate(-5deg);
+    -o-transform: rotate(-5deg);
+    -ms-transform: rotate(-5deg);
+    transform: rotate(-5deg);
+  }
 }
 
 #greeting {
@@ -120,10 +136,27 @@ src="http://www.snazzyspace.com/images/tumblr_cursors.gif" border="0" alt="Tumbl
     font-size: 20px;
 }
 
+#text:hover {
+    color: #40D6CC;
+    -webkit-transition: 0.3s ease-in-out;
+    -moz-transition: 0.3s ease-in-out;
+    -o-transition: 0.3s ease-in-out;
+    transition: 0.3s ease-in-out;
+}
+
 #hobbytext {
     text-align: center;
     color: #40D6CC;
 }
+
+#hobbytext:hover {
+    color: #e6005c;
+    -webkit-transition: 0.3s ease-in-out;
+    -moz-transition: 0.3s ease-in-out;
+    -o-transition: 0.3s ease-in-out;
+    transition: 0.3s ease-in-out;
+}
+
 
 #hobbies {
     display: inline-block;
@@ -158,8 +191,19 @@ src="http://www.snazzyspace.com/images/tumblr_cursors.gif" border="0" alt="Tumbl
     text-align: center;
     width: 600px;
     padding: 50px;
-    color: white;
     background-color: #40D6CC;
+}
+
+#foodtext {
+    color: white;
+}
+
+#foodtext:hover {
+    color: #e6005c;
+    -webkit-transition: 0.3s ease-in-out;
+    -moz-transition: 0.3s ease-in-out;
+    -o-transition: 0.3s ease-in-out;
+    transition: 0.3s ease-in-out;
 }
 
 .food {
@@ -190,11 +234,22 @@ src="http://www.snazzyspace.com/images/tumblr_cursors.gif" border="0" alt="Tumbl
 
 #friends {
     position: relative;
-    color: white;
     background-color: #ffafbc;
     text-align: center;
-    height: 400px;
+    height: 390px;
     padding: 20px;
+}
+
+#friendtext {
+    color: white;
+}
+
+#friendtext:hover {
+    color: #e6005c;
+    -webkit-transition: 0.3s ease-in-out;
+    -moz-transition: 0.3s ease-in-out;
+    -o-transition: 0.3s ease-in-out;
+    transition: 0.3s ease-in-out;
 }
 
 .friend {
@@ -296,11 +351,11 @@ src="http://www.snazzyspace.com/images/tumblr_cursors.gif" border="0" alt="Tumbl
     -moz-transition: 0.5s ease-in-out;
     -o-transition: 0.5s ease-in-out;
     transition: 0.5s ease-in-out;
-    -webkit-transform: rotate(360deg) scale(1.2);
-    -moz-transform: rotate(360deg) scale(1.2);
-    -o-transform: rotate(360deg) scale(1.2);
-    -ms-transform: rotate(360deg) scale(1.2);
-    transform: rotate(360deg) scale(1.2);
+    -webkit-transform: rotate(360deg) scale(1.1);
+    -moz-transform: rotate(360deg) scale(1.1);
+    -o-transform: rotate(360deg) scale(1.1);
+    -ms-transform: rotate(360deg) scale(1.1);
+    transform: rotate(360deg) scale(1.1);
 }
 
 #bone {
@@ -327,9 +382,18 @@ src="http://www.snazzyspace.com/images/tumblr_cursors.gif" border="0" alt="Tumbl
 }
 
 #contacttext {
-    font-size: 40px;
+    font-size: 50px;
+    font-style: bold;
     text-align: center;
     margin-top: 40px;
+}
+
+#contacttext:hover {
+    color: #40D6CC;
+    -webkit-transition: 0.3s ease-in-out;
+    -moz-transition: 0.3s ease-in-out;
+    -o-transition: 0.3s ease-in-out;
+    transition: 0.3s ease-in-out;
 }
 
 .sendtext {
